# InferXgate

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  check_connections.sh  compare_performance.sh  docker-compose.prod.yml  docker-compose.yml  quickstart.sh  test_enhanced_features.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  docker-publish.yml
backend/: .env.example  Cargo.toml  Dockerfile  README_BACKFILL.md
backend/migrations/: 001_initial_schema.sql  002_add_key_lookup_hash.sql
backend/src/: cache.rs  config.rs  cost.rs  database.rs  error.rs  load_balancer.rs  main.rs  metrics.rs  provider_config.rs  rate_limiter.rs
backend/src/auth/: jwt.rs  keys.rs  middleware.rs  mod.rs  password.rs
backend/src/auth/oauth/: github.rs  mod.rs  provider.rs
backend/src/handlers/: auth.rs  mod.rs  provider.rs
backend/src/models/: mod.rs  user.rs  virtual_key.rs
backend/src/providers/: anthropic.rs  azure.rs  gemini.rs  mod.rs  openai.rs
benchmark/: .env.benchmark  README.md  docker-compose.benchmark.yml
benchmark/k6/scripts/: baseline-latency.js  sustained-load.js  throughput-ramp.js
benchmark/litellm/: config.yaml
benchmark/prometheus/: prometheus.yml
benchmark/scripts/: run-benchmark.sh
docs/: openapi.yaml
frontend/: Dockerfile  biome.json  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/components/: Layout.tsx  (+1 more)
scripts/: performance_test.sh  test_bcrypt_performance.sh
(+12 files in other folders)
